--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ APP_DOMAIN=http://localhost:8080
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=om_blog
+DB_DATABASE=bayshop
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
