--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_NAME=Om
 APP_DEBUG=true
-APP_DOMAIN=http://localhost:8080
+APP_DOMAIN=http://localhost:8092/
 
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bayshop
+DB_DATABASE=om_blog
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -19,4 +19,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-FILE_CENTER=http://localhost/victoria_file/
+FILE_CENTER=http://localhost/file_center/
