--- a/.env
+++ b/.env
@@ -19,4 +19,4 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-FILE_CENTER=http://localhost/file_center/
+FILE_CENTER=http://localhost:8080/file_center/
