--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_PASSWORD=123456
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
